--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
       <a href="/" class="header__logo" aria-label="Яндекс.Дом"></a>
       <button class="header__menu" aria-expanded="false">
-        <span class="header__menu-text a11y-hidden">Открыть меню</span>
+        <span class="a11y-hidden">Открыть меню</span>
       </button>
       <ul class="header__links">
         <li class="header__item">
@@ -32,7 +32,7 @@
     </header>
 
     <main class="main">
-      <section class="section main__general">
+      <section class="main__general">
         <h2 class="section__title section__title-header section__main-title">
           Главное
         </h2>
