--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     </header>
 
     <main class="main">
-      <section class="main__general">
-        <h2 class="section__title section__title-header section__main-title">
+      <section>
+        <h2 class="section__title section__title-header h">
           Главное
         </h2>
         <div class="hero-dashboard">
@@ -66,7 +66,7 @@
             </ul>
           </div>
           <ul class="hero-dashboard__schedule">
-            <li class="event">
+            <li >
               <button class="event__button">
                 <span
                   class="event__icon event__icon_temp"
@@ -77,7 +77,7 @@
                 <span class="event__subtitle">Начнет охлаждать в 16:30</span>
               </button>
             </li>
-            <li class="event">
+            <li >
               <button class="event__button">
                 <span
                   class="event__icon event__icon_light"
@@ -88,7 +88,7 @@
                 <span class="event__subtitle">Включится в 17:00</span>
               </button>
             </li>
-            <li class="event">
+            <li >
               <button class="event__button">
                 <span
                   class="event__icon event__icon_light"
@@ -103,7 +103,7 @@
         </div>
       </section>
 
-      <section class="section main__scripts">
+      <section class="main__scripts">
         <h2 class="section__title section__title-header">Избранные сценарии</h2>
 
         <ul class="event-grid">
@@ -163,7 +163,7 @@
         </ul>
       </section>
 
-      <section class="section main__devices">
+      <section class="main__devices">
         <div class="section__title">
           <h2 class="section__title-header">Избранные устройства</h2>
 
@@ -239,7 +239,7 @@
           data-id="all"
         >
           <ul class="section__panel-list">
-            <li class="event">
+            <li>
               <button class="event__button">
                 <span
                   class="event__icon event__icon_light2"
@@ -250,7 +250,7 @@
                 <span class="event__subtitle">Включено</span>
               </button>
             </li>
-            <li class="event">
+            <li >
               <button class="event__button">
                 <span
                   class="event__icon event__icon_light"
@@ -261,7 +261,7 @@
                 <span class="event__subtitle">Включится в 17:00</span>
               </button>
             </li>
-            <li class="event">
+            <li >
               <button class="event__button">
                 <span
                   class="event__icon event__icon_temp"
@@ -272,7 +272,7 @@
                 <span class="event__subtitle">Выключено до 17:00</span>
               </button>
             </li>
-            <li class="event">
+            <li >
               <button class="event__button">
                 <span
                   class="event__icon event__icon_light"
@@ -283,7 +283,7 @@
                 <span class="event__subtitle">Включится в 17:00</span>
               </button>
             </li>
-            <li class="event">
+            <li >
               <button class="event__button">
                 <span
                   class="event__icon event__icon_light2"
@@ -294,7 +294,7 @@
                 <span class="event__subtitle">Включено</span>
               </button>
             </li>
-            <li class="event">
+            <li >
               <button class="event__button">
                 <span
                   class="event__icon event__icon_light"
@@ -305,7 +305,7 @@
                 <span class="event__subtitle">Выключено</span>
               </button>
             </li>
-            <li class="event">
+            <li >
               <button class="event__button">
                 <span
                   class="event__icon event__icon_light2"
@@ -328,7 +328,7 @@
           data-id="kitchen"
         >
           <ul class="section__panel-list">
-            <li class="event">
+            <li >
               <button class="event__button">
                 <span
                   class="event__icon event__icon_light2"
@@ -339,7 +339,7 @@
                 <span class="event__subtitle">Включено</span>
               </button>
             </li>
-            <li class="event">
+            <li >
               <button class="event__button">
                 <span
                   class="event__icon event__icon_temp"
@@ -362,7 +362,7 @@
           data-id="hall"
         >
           <ul class="section__panel-list">
-            <li class="event">
+            <li >
               <button class="event__button">
                 <span
                   class="event__icon event__icon_light"
@@ -373,7 +373,7 @@
                 <span class="event__subtitle">Выключено</span>
               </button>
             </li>
-            <li class="event">
+            <li >
               <button class="event__button">
                 <span
                   class="event__icon event__icon_light2"
@@ -396,7 +396,7 @@
           data-id="lights"
         >
           <ul class="section__panel-list">
-            <li class="event">
+            <li >
               <button class="event__button">
                 <span
                   class="event__icon event__icon_light"
@@ -407,7 +407,7 @@
                 <span class="event__subtitle">Включится в 17:00</span>
               </button>
             </li>
-            <li class="event">
+            <li >
               <button class="event__button">
                 <span
                   class="event__icon event__icon_light"
@@ -418,7 +418,7 @@
                 <span class="event__subtitle">Включится в 17:00</span>
               </button>
             </li>
-            <li class="event">
+            <li >
               <button class="event__button">
                 <span
                   class="event__icon event__icon_light2"
@@ -429,7 +429,7 @@
                 <span class="event__subtitle">Включено</span>
               </button>
             </li>
-            <li class="event">
+            <li >
               <button class="event__button">
                 <span
                   class="event__icon event__icon_light"
@@ -452,7 +452,7 @@
           data-id="cameras"
         >
           <ul class="section__panel-list">
-            <li class="event">
+            <li>
               <button class="event__button">
                 <span
                   class="event__icon event__icon_light2"
@@ -470,16 +470,16 @@
 
     <footer class="footer">
       <ul class="footer__list">
-        <li class="footer__item">
+        <li>
           <a class="footer__link" href="/">Помощь</a>
         </li>
-        <li class="footer__item">
+        <li>
           <a class="footer__link" href="/">Обратная связь</a>
         </li>
-        <li class="footer__item">
+        <li>
           <a class="footer__link" href="/">Разработчикам</a>
         </li>
-        <li class="footer__item">
+        <li>
           <a class="footer__link" href="/">Условия использования</a>
         </li>
       </ul>
