remove some classes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </ul>
     </header>
 
-    <main class="main">
+    <main>
       <section>
         <h2 class="section__title section__title-header h">
           Главное
@@ -468,8 +468,8 @@
       </section>
     </main>
 
-    <footer class="footer">
-      <ul class="footer__list">
+    <footer>
+      <ul>
         <li>
           <a class="footer__link" href="/">Помощь</a>
         </li>
