--- a/index.html
+++ b/index.html
@@ -492,6 +492,9 @@
 
       <div class="footer__copyright">© 1997–2022 ООО «Яндекс»</div>
     </footer>
-    <script defer src="scripts.js"></script>
+    <!-- <script defer src="scripts.js"></script> -->
+    <script>
+(()=>{function e(e,t,i){Array.from(e).forEach(e=>{e.addEventListener(t,i)})}function t(t){let i=t.querySelector(".section__tab_active").dataset.id,a=t.querySelectorAll(".section__tab"),n=Array.from(a).map(e=>e.dataset.id),r=t.querySelector(".section__select");function s(e){let a=t.querySelector(`.section__tab[data-id=${e}]`),n=t.querySelector(`.section__panel[data-id=${e}]`),s=t.querySelector(".section__tab_active"),l=t.querySelector(".section__panel:not(.section__panel_hidden)");i=e,s.classList.remove("section__tab_active"),s.setAttribute("aria-selected","false"),s.removeAttribute("tabindex"),a.classList.add("section__tab_active"),a.setAttribute("aria-selected","true"),a.setAttribute("tabindex","0"),a.focus({preventScroll:!0}),l.classList.add("section__panel_hidden"),l.setAttribute("aria-hidden","true"),n.classList.remove("section__panel_hidden"),n.setAttribute("aria-hidden","false"),r.value=e}r.addEventListener("input",()=>{s(r.value)}),e(a,"click",e=>{let t=e.target.dataset.id;s(t)}),e(a,"keydown",e=>{if(e.ctrlKey||e.metaKey||e.shiftKey||e.altKey)return;let t=n.indexOf(i);if(37===e.which)--t;else if(39===e.which)++t;else if(36===e.which)t=0;else{if(35!==e.which)return;t=n.length-1}s(n[t=t>=n.length?0:n.length-1]),e.preventDefault()})}function i(e){let t=!1,i=document.querySelector(".header__links"),a=e.querySelector(".header__menu-text");e.addEventListener("click",()=>{t=!t,e.setAttribute("aria-expanded",t?"true":"false"),a.textContent=t?"Закрыть меню":"Открыть меню",i.classList.toggle("header__links_opened",t),i.classList.add("header__links-toggled")})}document.addEventListener("DOMContentLoaded",()=>{t(document.querySelector(".main__devices")),i(document.querySelector(".header__menu"))})})();
+      </script>
   </body>
 </html>
